--- a/XperiaParts/AndroidManifest.xml
+++ b/XperiaParts/AndroidManifest.xml
@@ -66,5 +66,16 @@
                        android:resource="@string/display_setting_summary"/>
         </activity>
 
+        <service
+            android:name=".RefreshRateTileService"
+            android:icon="@drawable/ic_qs_refresh_rate"
+            android:label="@string/refresh_rate_tile_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+
     </application>
 </manifest>
