--- a/XperiaParts/AndroidManifest.xml
+++ b/XperiaParts/AndroidManifest.xml
@@ -15,11 +15,30 @@
 
         <receiver android:name=".BootCompletedReceiver"
                   android:exported="false">
-            <intent-filter>
+            <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+
+
+    <activity
+        android:name=".XperiaSettingsActivity"
+        android:label="@string/app_name"
+        android:exported="false"
+        android:theme="@style/Theme.SubSettingsBase">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.system" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/app_summary" />
+            <meta-data android:name="com.android.settings.icon" 
+                android:resource="@drawable/ic_xperia_logo"/>
+        </activity>
 
         <service
             android:name=".charger.ChargerTileService"
@@ -41,14 +60,10 @@
                 android:theme="@style/Theme.SubSettingsBase"
                 android:label="@string/charger_setting_header">
             <intent-filter>
-                <action android:name="com.android.settings.action.IA_SETTINGS"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
             </intent-filter>
-            <meta-data android:name="com.android.settings.category"
-                       android:value="com.android.settings.category.ia.battery" />
-
-            <meta-data android:name="com.android.settings.summary"
-                       android:resource="@string/charger_setting_summary"/>
         </activity>
 
         <activity
@@ -57,13 +72,10 @@
                 android:theme="@style/Theme.SubSettingsBase"
                 android:label="@string/display_setting_header">
             <intent-filter>
-                <action android:name="com.android.settings.action.IA_SETTINGS"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
             </intent-filter>
-            <meta-data android:name="com.android.settings.category"
-                       android:value="com.android.settings.category.ia.display" />
-
-            <meta-data android:name="com.android.settings.summary"
-                       android:resource="@string/display_setting_summary"/>
         </activity>
 
     </application>
