--- a/XperiaParts/AndroidManifest.xml
+++ b/XperiaParts/AndroidManifest.xml
@@ -41,30 +41,6 @@
                 android:resource="@drawable/ic_xperia_logo"/>
         </activity>
 
-        <service
-            android:name=".charger.ChargerTileService"
-            android:label="@string/charger_qs_tile_title"
-            android:icon="@drawable/ic_qs_pause_charging"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
-            android:exported="true">
-            <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
-                        android:value="true" />
-
-            <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE"/>
-            </intent-filter>
-        </service>
-
-        <activity
-                android:name=".charger.ChargerSettingsActivity"
-                android:exported="false"
-                android:theme="@style/Theme.SubSettingsBase"
-                android:label="@string/charger_setting_header">
-            <intent-filter>
-                <action android:name="com.android.settings.action.IA_SETTINGS"/>
-            </intent-filter>
-        </activity>
-
         <activity
                 android:name=".display.DisplaySettingsActivity"
                 android:exported="false"
@@ -82,6 +58,40 @@
             android:label="@string/refresh_rate_tile_title"
             android:exported="true"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+
+        <activity
+                android:name=".sound.AudioSettingsActivity"
+                android:exported="false"
+                android:theme="@style/Theme.SubSettingsBase"
+                android:label="@string/audio_setting_header">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS"/>
+            </intent-filter>
+        </activity> 
+
+        <activity
+                android:name=".charger.ChargerSettingsActivity"
+                android:exported="false"
+                android:theme="@style/Theme.SubSettingsBase"
+                android:label="@string/charger_setting_header">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS"/>
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name=".charger.ChargerTileService"
+            android:label="@string/charger_qs_tile_title"
+            android:icon="@drawable/ic_qs_pause_charging"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:exported="true">
+            <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
+                        android:value="true" />
+
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE"/>
             </intent-filter>
