--- a/packages/XperiaParts/AndroidManifest.xml
+++ b/packages/XperiaParts/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="com.xperia.parts"
+          package="org.lineageos.settings.device"
           android:versionCode="1"
           android:versionName="1.0"
           android:sharedUserId="android.uid.system">
